--- a/Metadata/filter_gene_bed.ipynb
+++ b/Metadata/filter_gene_bed.ipynb
@@ -2,16 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import pandas as pd"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## hg38 UCSC"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -22,10 +28,7 @@
     "df = pd.read_csv('hg38.bed', sep='\\t', usecols=[0, 1, 2, 3, 23], names=['chr', 'start', 'end', 'gene_name', 'gene_type'])"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -45,10 +48,7 @@
     "df['gene_type'].unique()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -69,10 +69,7 @@
     "df"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -84,10 +81,7 @@
     "coding_gene_df.to_csv('coding_genes.bed', sep='\\t', header=False, index=False, columns=['chr', 'start', 'end', 'gene_name'])"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -171,10 +165,91 @@
     "\tprint(col)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## hg38 Siavash"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('genes_siavash.bed', sep='\\t', names=['chr', 'start', 'end', 'gene_name'])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "         chr      start        end  gene_name\n0       chr1      14361      29370     WASH7P\n1       chr1      17368      17436  MIR6859-1\n2       chr1      17368      17436  MIR6859-2\n3       chr1      17368      17436  MIR6859-3\n4       chr1      17368      17436  MIR6859-4\n...      ...        ...        ...        ...\n52288   chr4  122152331  122364167      BLTP1\n52289  chr16   30370934   30377991      MYL11\n52290  chr14   93651319   93654808      LYSET\n52291  chrMT          0          0     MT-TL1\n52292  chrMT          0          0      MT-TP\n\n[52293 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>chr</th>\n      <th>start</th>\n      <th>end</th>\n      <th>gene_name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>chr1</td>\n      <td>14361</td>\n      <td>29370</td>\n      <td>WASH7P</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>chr1</td>\n      <td>17368</td>\n      <td>17436</td>\n      <td>MIR6859-1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>chr1</td>\n      <td>17368</td>\n      <td>17436</td>\n      <td>MIR6859-2</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>chr1</td>\n      <td>17368</td>\n      <td>17436</td>\n      <td>MIR6859-3</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>chr1</td>\n      <td>17368</td>\n      <td>17436</td>\n      <td>MIR6859-4</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>52288</th>\n      <td>chr4</td>\n      <td>122152331</td>\n      <td>122364167</td>\n      <td>BLTP1</td>\n    </tr>\n    <tr>\n      <th>52289</th>\n      <td>chr16</td>\n      <td>30370934</td>\n      <td>30377991</td>\n      <td>MYL11</td>\n    </tr>\n    <tr>\n      <th>52290</th>\n      <td>chr14</td>\n      <td>93651319</td>\n      <td>93654808</td>\n      <td>LYSET</td>\n    </tr>\n    <tr>\n      <th>52291</th>\n      <td>chrMT</td>\n      <td>0</td>\n      <td>0</td>\n      <td>MT-TL1</td>\n    </tr>\n    <tr>\n      <th>52292</th>\n      <td>chrMT</td>\n      <td>0</td>\n      <td>0</td>\n      <td>MT-TP</td>\n    </tr>\n  </tbody>\n</table>\n<p>52293 rows × 4 columns</p>\n</div>"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "filtered_df = df[~df['gene_name'].str.startswith(tuple(['MIR', 'LINC', 'LOC']))]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "         chr      start        end gene_name\n0       chr1      14361      29370    WASH7P\n9       chr1      34610      36081   FAM138A\n10      chr1      34610      36081   FAM138F\n11      chr1      34610      36081   FAM138C\n13      chrY   13248378   13480670       UTY\n...      ...        ...        ...       ...\n52288   chr4  122152331  122364167     BLTP1\n52289  chr16   30370934   30377991     MYL11\n52290  chr14   93651319   93654808     LYSET\n52291  chrMT          0          0    MT-TL1\n52292  chrMT          0          0     MT-TP\n\n[45194 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>chr</th>\n      <th>start</th>\n      <th>end</th>\n      <th>gene_name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>chr1</td>\n      <td>14361</td>\n      <td>29370</td>\n      <td>WASH7P</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>chr1</td>\n      <td>34610</td>\n      <td>36081</td>\n      <td>FAM138A</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>chr1</td>\n      <td>34610</td>\n      <td>36081</td>\n      <td>FAM138F</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>chr1</td>\n      <td>34610</td>\n      <td>36081</td>\n      <td>FAM138C</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>chrY</td>\n      <td>13248378</td>\n      <td>13480670</td>\n      <td>UTY</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>52288</th>\n      <td>chr4</td>\n      <td>122152331</td>\n      <td>122364167</td>\n      <td>BLTP1</td>\n    </tr>\n    <tr>\n      <th>52289</th>\n      <td>chr16</td>\n      <td>30370934</td>\n      <td>30377991</td>\n      <td>MYL11</td>\n    </tr>\n    <tr>\n      <th>52290</th>\n      <td>chr14</td>\n      <td>93651319</td>\n      <td>93654808</td>\n      <td>LYSET</td>\n    </tr>\n    <tr>\n      <th>52291</th>\n      <td>chrMT</td>\n      <td>0</td>\n      <td>0</td>\n      <td>MT-TL1</td>\n    </tr>\n    <tr>\n      <th>52292</th>\n      <td>chrMT</td>\n      <td>0</td>\n      <td>0</td>\n      <td>MT-TP</td>\n    </tr>\n  </tbody>\n</table>\n<p>45194 rows × 4 columns</p>\n</div>"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "filtered_df.to_csv('genes_siavash_filtered.bed', sep='\\t', header=False, index=False)"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -183,10 +258,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
