--- a/Metadata/filter_gene_bed.ipynb
+++ b/Metadata/filter_gene_bed.ipynb
@@ -204,7 +204,199 @@
     "## READ GTF"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "manually add: SPATA5, SPATA5L1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "with open('gencode.v46.basic.annotation.gtf') as fp_read:\n",
+    "\tfp_read.readline()\n",
+    "\tfp_read.readline()\n",
+    "\tfp_read.readline()\n",
+    "\tfp_read.readline()\n",
+    "\tfp_read.readline()\n",
+    "\tfor line in fp_read:\n",
+    "\t\tline = line.replace('\\n', '')\n",
+    "\t\tline = line.split('\\t')\n",
+    "\t\tif line[2] == 'gene':\n",
+    "\t\t\tif line[8].split('; ')[2].split('\"')[1] == 'MT-TP':\n",
+    "\t\t\t\tprint(line)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "protein_genes = []\n",
+    "chrom = []\n",
+    "start = []\n",
+    "end = []\n",
+    "with open('gencode.v46.basic.annotation.gtf') as fp_read:\n",
+    "\tfp_read.readline()\n",
+    "\tfp_read.readline()\n",
+    "\tfp_read.readline()\n",
+    "\tfp_read.readline()\n",
+    "\tfp_read.readline()\n",
+    "\tfor line in fp_read:\n",
+    "\t\tline = line.replace('\\n', '')\n",
+    "\t\tline = line.split('\\t')\n",
+    "\t\tif line[2] == 'gene':\n",
+    "\t\t\tif 'protein_coding' in line[8].split('; ')[1]:\n",
+    "\t\t\t\t# print(line[8].split('; ')[2].split('\"')[1])\n",
+    "\t\t\t\tprotein_genes.append(line[8].split('; ')[2].split('\"')[1])\n",
+    "\t\t\t\tchrom.append(line[0])\n",
+    "\t\t\t\tstart.append(line[3])\n",
+    "\t\t\t\tend.append(line[4])\n",
+    "protein_genes_entries = list(zip(chrom, start, end, protein_genes))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "with open('gtf_protein_coding.bed', 'w') as fp_write:\n",
+    "\tfor entry in protein_genes_entries:\n",
+    "\t\tfp_write.write('\\t'.join(entry) + '\\n')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## hg38 Siavash intersect with Protein Coding"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('genes_siavash.bed', sep='\\t', names=['chr', 'start', 'end', 'gene_name'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# check if there exists genes in DDG2P but not in Siavash's file\n",
+    "ddg2p_df = pd.read_csv('DDG2P_14_11_2023.csv', sep='\\t')\n",
+    "ddg2p_genes = ddg2p_df['gene symbol'].to_list()\n",
+    "siavash_genes = df['gene_name'].to_list()\n",
+    "for ddg2p_gene in ddg2p_genes:\n",
+    "\tif ddg2p_gene.upper() not in siavash_genes:\n",
+    "\t\tprint(ddg2p_gene)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "for ddg2p_gene in ddg2p_genes:\n",
+    "\tif ddg2p_gene.upper() not in protein_genes:\n",
+    "\t\tprint(ddg2p_gene)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "len(ddg2p_genes)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ddg2p_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
